--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,12 +1,12 @@
 name: Update repo and publish to PyPi
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 9 * * 1'
+    - cron:  '0 9 * * 1'
+  workflow_dispatch:
 
 jobs:
-  publish:
+  update:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/packaging.txt
-      - name: Build and publish
+      - name: Update, build and publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
