--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update repo and publish to PyPi
 
 on:
   schedule:
-    - cron:  '0 9 * * 1'
+    - cron:  '0 9 30 * 1'
   workflow_dispatch:
 
 jobs:
