--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update repo and publish to PyPi
 
 on:
   schedule:
-    - cron:  '1 11 * * 1'
+    - cron:  '11 11 1 * *'
   workflow_dispatch:
 
 jobs:
